[package]
name = "dnf_helper_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
winapi = { version = "0.3", features = [
    "winioctl",
    "ntstatus",
    "processthreadsapi",
    "handleapi",
    "memoryapi",
    "winnt",
    "minwindef",
    "winsvc",
    "basetsd",
    "winuser"
] }


[build]
